refactor: Service, Controller가 DTO로 통신하도록 변경